fix: 퀴즈 컴포넌트 overflow 수정

--- a/frontend/src/components/ChatRoom/ChatRoom.module.css
+++ b/frontend/src/components/ChatRoom/ChatRoom.module.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   padding: 16px;
 
   & > .quizButton {
